package trategy_pattern;

public class CsvFileReader implements FileReaderStrategy{
    @Override
    public String read(String path) {
        return "";
    }
}
