package trategy_pattern;

public interface FileReaderStrategy {
    String read(String path);
}
